Bug 1881536 - Call InitializeMacApp before CheckDowngrade dialog. r=spohl

We don't move the InitializeMacApp call earlier in this function outside of the isDowngrade branch because that impacted performance (bug 1876059).

Differential Revision: https://phabricator.services.mozilla.com/D211883